--- a/.github/workflows/build-hald-image.yml
+++ b/.github/workflows/build-hald-image.yml
@@ -42,6 +42,18 @@ jobs:
             is_next_version: true
 
     steps:
+      - name: Free space
+        shell: bash
+        run: |
+          set -x
+          df -h /
+          sudo rm -rf /opt/hostedtoolcache
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /usr/local/.ghcup
+          df -h /
+
       - name: Checkout repo
         uses: actions/checkout@v6
 
