build niri image

--- a/.github/workflows/build-hald-image.yml
+++ b/.github/workflows/build-hald-image.yml
@@ -26,7 +26,7 @@ jobs:
           - 43
         desktop:
           # - gnome
-          - base
+          - niri
           - cosmic
         build_target:
           - main
