disable cosmic builds add niri-git build
fix unbound var error in comp_shell

--- a/.github/workflows/build-hald-image.yml
+++ b/.github/workflows/build-hald-image.yml
@@ -27,7 +27,7 @@ jobs:
         desktop:
           # - gnome
           - niri
-          - cosmic
+          - niri-git
         build_target:
           - main
           - nvidia
